--- a/nyari.html
+++ b/nyari.html
@@ -18,7 +18,7 @@
                        <a href="#photos" class="nav-link"> <li>Photos</li></a>
                        <a href="#snaps" class="nav-link"> <li>Snaps</li></a>
                        <a href="#edits" class="nav-link"> <li>Edits</li></a>
-                       <a href="index.html" class="nav-link"> <li>Back</li></a>
+                       <a href="./" class="nav-link"> <li>Back</li></a>
                     </ul>
                 </nav>
             </header>
